[package]
name = "botw-conv"
version = "0.1.0"
authors = ["Shane"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glob = "0.3.0"
futures = "0.3.4"
async-std = "1.5.0"
clap = "2.33.3"
botw-conv = { git = "https://github.com/shanepm/botw-conv" }